tests/baselines/reference/reachabilityChecks10.errors.txt
reachabilityChecks10.ts(2,1): error TS7027: Unreachable code detected.


==== reachabilityChecks10.ts (1 errors) ====
    throw new Error("")
    console.log("1")
    ~~~~~~~~~~~~~~~~
!!! error TS7027: Unreachable code detected.
    console.log("2")
    